# Oxidize

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  oxidize-151f9c7df633c712.js  oxidize-151f9c7df633c712_bg.wasm  oxidize-1737426abd34e18e.js  oxidize-1737426abd34e18e_bg.wasm  oxidize-2023a25c47904b90.js  oxidize-2023a25c47904b90_bg.wasm  oxidize-21f55e05324f4276.js  oxidize-21f55e05324f4276_bg.wasm  oxidize-26a376edc24e1654.js  oxidize-26a376edc24e1654_bg.wasm  oxidize-273ebbd1830db22.js  oxidize-273ebbd1830db22_bg.wasm  oxidize-34460ab1af29ee93.js  oxidize-34460ab1af29ee93_bg.wasm  oxidize-38b2577a9c3347e9.js  oxidize-38b2577a9c3347e9_bg.wasm  oxidize-4069050d3f5df82b.js  oxidize-4069050d3f5df82b_bg.wasm  oxidize-424ea12c24fc82c1.js  oxidize-424ea12c24fc82c1_bg.wasm  oxidize-4320b78fdc1d016e.js  oxidize-4320b78fdc1d016e_bg.wasm  oxidize-484945256dbe2553.js  oxidize-484945256dbe2553_bg.wasm  oxidize-5588751306e8404a.js  oxidize-5588751306e8404a_bg.wasm  oxidize-5672563e0a42b71.js  oxidize-5672563e0a42b71_bg.wasm  oxidize-56e459c693374448.js  oxidize-56e459c693374448_bg.wasm  oxidize-5ac7bf15b2fea84f_bg.wasm  oxidize-60f7e8b4e2180dee.js  oxidize-60f7e8b4e2180dee_bg.wasm  (+54 more)
.github/workflows/: deploy.yml
ios/: project.yml
ios/OxidizeApp/: ContentView.swift  OxidizeApp.swift
ios/OxidizeApp/Models/: AuthModels.swift  Database.swift  (+7 more)
privacy-policy/: index.html
src/: app.rs  lib.rs  stats.rs  storage.rs  supabase.rs  types.rs
src/pages/: auth.rs  dashboard.rs  mod.rs  routine_builder.rs  settings.rs  stats_page.rs  workout.rs
(+49 files in other folders)
